# binturong

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html  style.css  tailwind.config.js
src/: compare.rs  discovery.rs  lib.rs  main.rs  parser.rs  table.rs
tests/: integration.rs
