[package]
name = "binturong"
version = "0.1.0"
edition = "2021"
description = "Compare multiple .env files side-by-side to detect config drift"
license = "MIT"
repository = "https://github.com/iamkorun/binturong"
keywords = ["dotenv", "config", "diff", "cli", "devops"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "binturong"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"

[dev-dependencies]
tempfile = "3"
